test/libsolidity/syntaxTests/pragma/experimental_pragma_unknown_string_literal.sol
pragma experimental unsupportedName;
// ====
// experimental: true
// ----
// SyntaxError 8491: (0-36): Unsupported experimental feature name.
